--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ pipeline:
     commands:
       - npm install
       - npm test
-      - test:e2e
+      - npm test:e2e
   publish:
     image: plugins/docker
     repo: drone/node-demo
