--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 pipeline:
   build:
-    image: node
+    image: cypress/included:6.1.0
     commands:
       - npm install
       - npm run test:e2e
