--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha -R spec spec.js",
-    "test:e2e": "cypress run -s cypress/integration/**/*.spec.js -b chrome --headless"
+    "test:e2e": "cypress run -s cypress/integration/**/*.spec.js -b chrome --headless --record --key d3d75cb4-ab30-4562-aa07-1e510f96f0ad --parallel"
   },
   "repository": {
     "type": "git",
