--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 12
       - run: npm install
-      - run: npm test:e2e
+      - run: npm run test:e2e
 
   publish-npm:
     needs: build
